[tool.poetry]
name = "data_struct_and_algo"
version = "0.1.0"
description = "practice for data structure and algorithms"
authors = ["Amol Gawai <5114143+amolgawai@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
memoization = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
python-language-server = "^0.36.2"
epc = "^0.0.5"
flake8 = "^3.8.3"
ipython = "^7.19.0"
pytest = "^6.2.1"
pytest-sugar = "^0.9.4"
coverage = {version = "^5.3.1", extras = ["toml"]}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.coverage.run]
source = ["."]
omit = ["*__init__*", "*test*"]
[tool.coverage.report]
omit = ["*__init__*", "*test*"]