[tool.poetry]
name = "data_struct_and_algo"
version = "0.1.0"
description = "practice for data structure and algorithms"
authors = ["Amol Gawai <5114143+amolgawai@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
memoization = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
python-language-server = "^0.36.2"
epc = "^0.0.5"
flake8 = "^3.8.3"
ipython = "^7.19.0"
pytest = "^6.2.1"
pytest-sugar = "^0.9.4"
coverage = {version = "^5.3.1", extras = ["toml"]}
pytest-watch = "^4.2.0"
pytest-pythonpath = "^0.7.3"
pytest-picked = "^0.4.6"
pytest-testmon = "^1.0.3"
mypy = "^0.790"
hypothesis = "^6.1.1"
pytest-cov = "^2.11.1"

[tool.pytest.ini_options]
# empty section so that pytest can determine rootdir
testpaths = ["tests"]
python_paths = ["."]

[tool.coverage.run]
source = ["."]
omit = ["*__init__*", "*test*"]
[tool.coverage.report]
omit = ["*__init__*", "*test*"]
exclude_lines = ["pragma: no cover",
                "def __repr__",
                "def __str__",
                "if self.debug:",
                "if settings.DEBUG",
                "raise AssertionError",
                "raise NotImplementedError",
                "if 0:",
                "if __name__ == .__main__.:"
                ]

[tool.black]
line-length = 79
# target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
# exclude = '''
# (
#     /(
#         \.eggs
#     | \.git
#     | \.hg
#     | \.mypy_cache
#     | \.tox
#     | \.venv
#     | _build
#     | buck-out
#     | build
#     | dist
#     # The following are specific to Black, you probably don\'t want those.
#     | blib2to3
#     | tests/data
#     | profiling
#     )/
# )
# '''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
